src/objects/DatedExchangeRate__c.object
<CustomObject>
    <fields>
        <fullName>ConversionRate__c</fullName>
        <label>ConversionRate</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsoCode__c</fullName>
        <label>IsoCode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>MYR</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NextStartDate__c</fullName>
        <label>NextStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <label>DatedExchangeRate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ConversionRate__c</columns>
        <columns>IsoCode__c</columns>
        <columns>NextStartDate__c</columns>
        <columns>StartDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dated Exchange Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DatedExchangeRates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>